added the nse heatmap on the website icon

--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,9 @@
 
 <body>
     <div class="container">
-        <h1>📈 TradingView Watchlist Manager</h1>
+        <h1><a href="https://www.nseindia.com/market-data/live-market-indices/heatmap" target="_blank"
+                style="text-decoration:none; cursor:pointer;" title="Open NSE Heatmap">📈</a> TradingView Watchlist
+            Manager</h1>
 
         <div class="input-section" style="margin-bottom: 12px;">
             <textarea id="clipboardInput"
